--- a/app/views/teams/show/_team_info.html.erb
+++ b/app/views/teams/show/_team_info.html.erb
@@ -45,20 +45,42 @@
 
       <div
         data-calendar-target="calendarContainer"
-        class="hidden mt-6"
+        class="hidden mt-10"
       >
         <div class="col-span-1 lg:col-span-2">
+          <div class="flex flex-wrap items-center justify-center gap-3 mb-4 md:max-w-[80%] md:mx-auto">
+            <span class="py-1 px-4 text-sm rounded-lg bg-indigo-500 dark:bg-indigo-600 text-white shadow dark:shadow-none">
+              Today
+            </span>
+            <span class="py-1 px-4 text-sm rounded-lg bg-yellow-100 dark:bg-yellow-700/40 text-yellow-800 dark:text-yellow-400">
+              Season Start
+            </span>
+            <span class="py-1 px-4 text-sm rounded-lg bg-rose-200/60 dark:bg-rose-900/40 text-rose-600 dark:text-rose-500">
+              Season End
+            </span>
+            <span class="py-1 px-4 text-sm rounded-lg bg-slate-200/60 dark:bg-slate-700/60">
+              Days in Season
+            </span>
+            <span class="py-1 px-4 text-sm rounded-lg text-soft bg-slate-200/30 dark:bg-slate-700/30">
+              Days Not in Season
+            </span>
+            <span class="py-1 px-4 text-sm rounded-lg bg-slate-200/60 dark:bg-slate-700/60 opacity-40">
+              Excluded from Streak
+            </span>
+          </div>
           <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
             <% team.season_range.group_by { |date| date.beginning_of_month }.each_with_index do |(month, dates), index| %>
               <div class="p-4 bg-white dark:bg-slate-700/40 shadow border border:slate-200 dark:border-slate-600 rounded-lg">
-                <h3 class="text-md font-semibold text-slate-700 dark:text-slate-300 mb-2"><%= month.strftime("%B %Y") %></h3>
+                <h3 class="text-md font-semibold text-slate-700 dark:text-slate-300 mb-2"><%= month.strftime('%B %Y') %></h3>
                 <div class="grid grid-cols-7 gap-1.5 text-sm">
+
                   <!-- Week days -->
                   <% week_days = %w[Sun Mon Tue Wed Thu Fri Sat] %>
                   <% week_days = week_days.rotate(week_days.index(team.week_start.to_s.capitalize.first(3))) %>
                   <% week_days.each do |day| %>
                     <div class="font-semibold text-slate-700 dark:text-slate-300 text-center w-full"><%= day %></div>
                   <% end %>
+
                   <!-- Calculates the start offset for the calendar grid based on the start of the month and the week start day. -->
                   <!-- The start offset is the number of empty cells needed to align the first day of the month with the first day of the week. -->
                   <!-- This ensures the calendar grid is properly aligned with the days of the week. -->
@@ -69,22 +91,23 @@
                   <% start_offset.times do %>
                     <div></div>
                   <% end %>
+
                   <% (start_of_month..end_of_month).each do |date| %>
                     <div class="w-full h-8 aspect-square p-1 rounded-lg flex items-center justify-center
                       <%= case
                           when !dates.include?(date)
-                            'text-soft'
-                          when date == team.season_start_date || date == team.season_end_date
-                            'bg-yellow-100 dark:bg-yellow-700/40 text-yellow-800 dark:text-yellow-400 border border-yellow-400 dark:border-none'
+                            'text-soft bg-slate-200/30 dark:bg-slate-700/30'
+                          when date == team.season_start_date
+                            'bg-yellow-100 dark:bg-yellow-700/40 text-yellow-800 dark:text-yellow-400'
+                          when date == team.season_end_date
+                            'bg-rose-200/60 dark:bg-rose-900/40 text-rose-600 dark:text-rose-500'
                           when date == Date.current
-                            'bg-indigo-500 dark:bg-indigo-600 text-white'
-                          when date < Date.current
-                            'bg-indigo-200/60 dark:bg-indigo-900/40 text-indigo-600 dark:text-indigo-500'
+                            'bg-indigo-500 dark:bg-indigo-600 text-white shadow dark:shadow-none'
                           else
                             'bg-slate-200/60 dark:bg-slate-700/60'
                           end %>
 
-                          <%= 'opacity-35' if (date.saturday? && team.exclude_saturday_from_streak?) || (date.sunday? && team.exclude_sunday_from_streak?) %>
+                          <%= 'opacity-40' if team.exclude_from_streak?(date) && date != team.season_start_date && date != team.season_end_date %>
                           ">
                       <%= date.strftime('%e') %>
                     </div>
