feat: add `'btn-muted'` styles

--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -230,7 +230,7 @@
     </div>
 
     <!-- Open Sign Out Modal Button -->
-    <button data-action="click->modal#open" data-modal-id="signOutModal" class="btn btn-destructive font-bold btn-outline whitespace-nowrap">
+    <button data-action="click->modal#open" data-modal-id="signOutModal" class="btn btn-destructive font-bold btn-muted whitespace-nowrap">
       Sign out
     </button>
   </div>
@@ -242,7 +242,7 @@
     </div>
 
     <!-- Open Sign Out All Modal Button -->
-    <button data-action="click->modal#open" data-modal-id="signOutAllModal" class="btn btn-destructive font-bold btn-outline whitespace-nowrap">
+    <button data-action="click->modal#open" data-modal-id="signOutAllModal" class="btn btn-destructive font-bold btn-muted whitespace-nowrap">
       End all sessions
     </button>
   </div>
