--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -206,8 +206,8 @@
   </div>
 
   <div class="sticky bottom-0 flex items-center gap-4 pt-6 pb-6 bg-white border-t dark:bg-slate-900 border-slate-200 dark:border-slate-700">
-    <%= f.submit 'Save changes', data: { turbo: false }, class: 'btn btn-primary mr-auto' %>
-    <%= link_to 'Cancel', :back, data: { turbo: false }, class: 'btn btn-white' %>
+    <%= f.submit 'Save changes', data: { turbo: false }, class: 'btn btn-primary' %>
+    <%= link_to 'Cancel', :back, data: { turbo: false }, class: 'btn btn-white btn-muted' %>
   </div>
 <% end %>
 
