--- a/app/views/pinned_pages/manage.html.erb
+++ b/app/views/pinned_pages/manage.html.erb
@@ -18,6 +18,7 @@
     <ul
       data-controller="pinned-pages-reorder"
       data-pinned-pages-reorder-target="list"
+      class="my-6"
     >
       <% @pinned_pages.each do |page| %>
         <li
@@ -40,11 +41,12 @@
       <%= f.hidden_field :order, value: @pinned_pages.pluck(:id).join(','), data: { pinned_pages_reorder_target: 'orderInput' } %>
     </ul>
 
-    <div class="pt-6 mt-4 border-t border-slate-200 dark:border-slate-700">
+    <div class="flex flex-wrap items-center gap-4 pt-6 border-t border-slate-200 dark:border-slate-700">
       <%= f.submit 'Save changes', class: 'btn btn-primary' %>
+      <%= link_to 'Cancel', :back, data: { turbo: false }, class: 'btn btn-white btn-muted' %>
     </div>
   <% end %>
-  
+
   <% @pinned_pages.each do |page| %>
     <%= render 'delete_page_modal', page: page %>
   <% end %>
