--- a/app/views/errors/503.html.erb
+++ b/app/views/errors/503.html.erb
@@ -12,7 +12,7 @@
     <p class="mb-6 text-soft text-balance">Please try again later, or try one of the links below.</p>
 
     <div class="flex items-center justify-center gap-x-6">
-      <%= link_to :back, class: 'btn btn-white gap-2 font-bold' do %>
+      <%= link_to :back, class: 'btn btn-white btn-muted gap-2 font-bold' do %>
         <%= inline_svg_tag 'icons/arrow-long-left.svg', class: 'size-5' %>
         <span>Go back</span>
       <% end %>
