--- a/app/views/teams/forms/_form.html.erb
+++ b/app/views/teams/forms/_form.html.erb
@@ -1,6 +1,11 @@
 <%= form_with model: @team, data: { controller: "form-validation" }, html: { novalidate: true } do |form| %>
   <%= render 'shared/error_messages', resource: @team %>
 
+  <div class="my-6">
+    <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Team Information</h2>
+    <p class="text-sm text-slate-600 dark:text-slate-400">Provide details about your team.</p>
+  </div>
+
   <div class="form-group">
     <%= form.label :name, class: 'form-label' %>
     <div class="relative">
@@ -46,6 +51,11 @@
     </div>
   <% end %>
 
+  <div class="pt-6 my-6 border-t border-slate-200 dark:border-slate-700">
+    <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Season</h2>
+    <p class="text-sm text-slate-600 dark:text-slate-400">Define the start and end dates for your team&#8217;s season.</p>
+  </div>
+
   <div class="form-group">
     <%= form.label :season_start_date, class: 'form-label' do %>
       <p> Season start date
@@ -72,6 +82,11 @@
     </div>
 
     <p class="hidden my-1 error-message" data-form-validation-target="seasonEndDateError">Season end date must be after season start date</p>
+  </div>
+
+  <div class="pt-6 my-6 border-t border-slate-200 dark:border-slate-700">
+    <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Goals</h2>
+    <p class="text-sm text-slate-600 dark:text-slate-400">Set goals for your team to reach during the season.</p>
   </div>
 
   <div class="form-group">
