--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,12 +1,12 @@
 <%= turbo_frame_tag 'flash' do %>
   <% in_app_notifications_check = user_signed_in? ? current_user.settings(:notifications).in_app : true %>
 
-  <div data-controller="notifications" data-notifications-hidden-class="notification--hidden" data-notifications-visible-class="notification--visible" data-notifications-exit-class="notification--exit">
+  <div data-controller="notifications" data-notifications-hidden-class="notification--hidden" data-notifications-visible-class="notification--visible" data-notifications-exit-class="notification--exit" class="fixed top-8 sm:right-8 mx-[10vw] sm:mx-0 max-w-[80vw] sm:max-w-sm space-y-1 z-50">
     <% if notice && in_app_notifications_check %>
       <div
         data-notifications-target="notification"
         data-notifications-duration-value="5000"
-        class="flex items-center p-4 mb-4 text-sm text-blue-700 border border-blue-300 rounded-lg bg-blue-50 dark:bg-slate-800 dark:text-blue-400 dark:border-blue-800 fixed top-10 right-10 z-50 max-w-[80vw] transition duration-300 ease-in-out notification--hidden"
+        class="flex items-center p-4 text-sm text-blue-700 border border-blue-300 rounded-lg bg-blue-50 dark:bg-slate-800 dark:text-blue-400 dark:border-blue-800 z-50 transition duration-200 ease-in-out notification--hidden"
       >
         <%= inline_svg_tag 'icons/info-circle.svg', class: 'size-5 mr-2 shrink-0' %>
         <span class="sr-only">Info</span>
@@ -15,10 +15,10 @@
           <button
             type="button"
             data-action="click->notifications#close"
-            class="-my-1.5 -mr-1.5 bg-blue-50 text-blue-500 rounded-lg focus:ring-2 focus:ring-blue-400 p-1.5 hover:bg-blue-200 inline-flex items-center justify-center size-8 dark:bg-slate-800 dark:text-blue-400 dark:hover:bg-slate-700"
+            class="-my-1.5 -mr-1.5 bg-blue-50 text-blue-700 rounded-lg focus:ring-2 focus:ring-blue-400 p-1.5 hover:bg-blue-200 inline-flex items-center justify-center size-8 dark:bg-slate-800 dark:text-blue-400 dark:hover:bg-slate-700"
             aria-label="Close">
             <span class="sr-only">Close</span>
-            <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-5' %>
+            <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-5 text-blue-500 dark:text-blue-400' %>
           </button>
         </p>
       </div>
@@ -28,7 +28,7 @@
       <div
         data-notifications-target="notification"
         data-notifications-duration-value="5000"
-        class="flex items-center p-4 mb-4 text-sm text-green-700 border border-green-300 rounded-lg bg-green-50 dark:bg-slate-800 dark:text-green-400 dark:border-green-800 fixed top-10 right-10 z-50 max-w-[80vw] transition duration-300 ease-in-out notification--hidden"
+        class="flex items-center p-4 text-sm text-green-500 border border-green-300 rounded-lg bg-green-50 dark:bg-slate-800 dark:text-green-400 dark:border-green-800 z-50 transition duration-200 ease-in-out notification--hidden"
       >
         <%= inline_svg_tag 'icons/check-circle.svg', class: 'size-5 mr-2 shrink-0' %>
         <span class="sr-only">Info</span>
@@ -37,10 +37,10 @@
           <button
             type="button"
             data-action="click->notifications#close"
-            class="-my-1.5 -mr-1.5 bg-green-50 text-green-500 rounded-lg focus:ring-2 focus:ring-green-400 p-1.5 hover:bg-green-200 inline-flex items-center justify-center size-8 dark:bg-slate-800 dark:text-green-400 dark:hover:bg-slate-700"
+            class="-my-1.5 -mr-1.5 bg-green-50 text-green-700 rounded-lg focus:ring-2 focus:ring-green-400 p-1.5 hover:bg-green-200 inline-flex items-center justify-center size-8 dark:bg-slate-800 dark:text-green-400 dark:hover:bg-slate-700"
             aria-label="Close">
             <span class="sr-only">Close</span>
-            <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-5' %>
+            <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-5 text-green-500 dark:text-green-400' %>
           </button>
         </p>
       </div>
@@ -50,7 +50,7 @@
       <div
         data-notifications-target="notification"
         data-notifications-duration-value="5000"
-        class="flex items-center p-4 mb-4 text-sm text-red-700 border border-red-300 rounded-lg bg-red-50 dark:bg-slate-800 dark:text-red-400 dark:border-red-800 fixed top-10 right-10 z-50 max-w-[80vw] transition duration-300 ease-in-out notification--hidden"
+        class="flex items-center p-4 text-sm text-red-700 border border-red-300 rounded-lg bg-red-50 dark:bg-slate-800 dark:text-red-400 dark:border-red-800 z-50 transition duration-200 ease-in-out notification--hidden"
       >
         <%= inline_svg_tag 'icons/x-circle.svg', class: 'size-5 mr-2 shrink-0' %>
         <span class="sr-only">Info</span>
@@ -62,7 +62,7 @@
             class="-my-1.5 -mr-1.5 bg-red-50 text-red-500 rounded-lg focus:ring-2 focus:ring-red-400 p-1.5 hover:bg-red-200 inline-flex items-center justify-center size-8 dark:bg-slate-800 dark:text-red-400 dark:hover:bg-slate-700"
             aria-label="Close">
             <span class="sr-only">Close</span>
-            <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-5' %>
+            <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-5 text-red-500 dark:text-red-400' %>
           </button>
         </p>
       </div>
@@ -72,7 +72,7 @@
       <div
         data-notifications-target="notification"
         data-notifications-duration-value="5000"
-        class="flex items-center p-4 mb-4 text-sm text-yellow-700 border border-yellow-300 rounded-lg bg-yellow-50 dark:bg-slate-800 dark:text-yellow-300 dark:border-yellow-800 fixed top-10 right-10 z-50 max-w-[80vw] transition duration-300 ease-in-out notification--hidden"
+        class="flex items-center p-4 text-sm text-yellow-700 border border-yellow-300 rounded-lg bg-yellow-50 dark:bg-slate-800 dark:text-yellow-300 dark:border-yellow-800 z-50 transition duration-200 ease-in-out notification--hidden"
       >
         <%= inline_svg_tag 'icons/exclamation-circle.svg', class: 'size-5 mr-2 shrink-0' %>
         <span class="sr-only">Info</span>
@@ -84,7 +84,7 @@
             class="-my-1.5 -mr-1.5 bg-yellow-50 text-yellow-500 rounded-lg focus:ring-2 focus:ring-yellow-400 p-1.5 hover:bg-yellow-200 inline-flex items-center justify-center size-8 dark:bg-slate-800 dark:text-yellow-400 dark:hover:bg-slate-700"
             aria-label="Close">
             <span class="sr-only">Close</span>
-            <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-5' %>
+            <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-5 text-yellow-500 dark:text-yellow-400' %>
           </button>
         </p>
       </div>
