--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,20 +5,20 @@
   </head>
 
   <body class='relative antialiased font-normal leading-normal bg-white text-slate-800 dark:text-slate-100 selection:bg-indigo-500/40 dark:bg-slate-900'>
-    <%= render "shared/flash" %>
-    <%= render "shared/pinned_pages_menu" if user_signed_in? %>
+    <%= render 'shared/flash' %>
     <div class="flex w-full h-svh max-h-svh">
-      <%= render "shared/sidebar" if user_signed_in? %>
+      <%= render 'shared/sidebar' if user_signed_in? %>
       <div class="flex flex-col flex-1 h-full min-w-0">
         <div class="flex flex-col justify-between h-full min-w-0 overflow-y-scroll">
+          <%= render 'shared/pinned_pages_menu' if user_signed_in? %>
           <main class="container px-5 mx-auto my-24">
             <%= yield %>
           </main>
         </div>
-        <%= render "shared/tab_bar" if user_signed_in? %>
+        <%= render 'shared/tab_bar' if user_signed_in? %>
       </div>
     </div>
 
-    <%= turbo_stream_from "pinned_pages_list" %>
+    <%= turbo_stream_from 'pinned_pages_list' %>
   </body>
 </html>
