--- a/app/views/teams/forms/_edit_settings.html.erb
+++ b/app/views/teams/forms/_edit_settings.html.erb
@@ -16,11 +16,16 @@
     </div>
 
     <div class="form-group">
-      <div class="flex items-center gap-2">
-        <%= settings_form.check_box :require_gender, { checked: @team.require_gender?, disabled: @team.owner.gender.blank?, class: "form-input-checkbox", data: { restore_defaults_target: 'requireGender', team_gender_fields_target: 'requireGender', action: 'change->team-gender-fields#toggleFields' } }, true, false %>
-        <%= settings_form.label :require_gender, 'Require gender', class: "select-none text-sm text-slate-700 dark:text-slate-300" %>
+      <div class="flex gap-x-2.5">
+        <div class="form-input-toggle shrink-0" data-controller="toggle-checkbox" data-action="click->toggle-checkbox#toggle">
+          <span class="form-input-toggle-switch"></span>
+          <%= settings_form.check_box :require_gender, { checked: @team.require_gender?, disabled: @team.owner.gender.blank?, class: 'sr-only', data: { restore_defaults_target: 'requireGender', team_gender_fields_target: 'requireGender', toggle_checkbox_target: 'checkbox', action: 'change->team-gender-fields#toggleFields' } }, true, false %>
+        </div>
+        <div>
+          <%= settings_form.label :require_gender, 'Gender required', class: 'select-none text-slate-700 dark:text-slate-300' %>
+          <p class="my-1 help-text"><%= @team.owner.gender.blank? ? 'You cannot require gender for your team if your own gender is not specified.' : 'Require users to specify their gender in order to join this team.' %></p>
+        </div>
       </div>
-      <p class="my-1 help-text"><%= @team.owner.gender.blank? ? 'You cannot require gender for your team if your own gender is not specified.' : 'Require users to specify their gender in order to join this team.' %></p>
     </div>
 
     <div class="form-group">
@@ -76,20 +81,26 @@
     </div>
 
     <div class="space-y-4 form-group">
-      <div>
-        <div class="flex items-center gap-2">
-          <%= settings_form.check_box :include_saturday, { checked: @team.include_saturday_in_streak?, class: "form-input-checkbox", data: { restore_defaults_target: 'includeSaturday' } }, true, false %>
-          <%= settings_form.label :include_saturday, 'Include Saturdays', class: "select-none text-sm text-slate-700 dark:text-slate-300" %>
+      <div class="flex gap-x-2.5">
+        <div class="form-input-toggle shrink-0" data-controller="toggle-checkbox" data-action="click->toggle-checkbox#toggle">
+          <span class="form-input-toggle-switch"></span>
+          <%= settings_form.check_box :include_saturday, { checked: @team.include_saturday_in_streak?, class: 'sr-only', data: { restore_defaults_target: 'includeSaturday', toggle_checkbox_target: 'checkbox' } }, true, false %>
         </div>
-        <p class="my-1 help-text">Check this box to allow Saturdays to reset your team member's run streaks.</p>
+        <div>
+          <%= settings_form.label :include_saturday, 'Include Saturdays', class: 'select-none text-slate-700 dark:text-slate-300' %>
+          <p class="my-1 help-text">Check this box to allow Saturdays to reset your team member's run streaks.</p>
+        </div>
       </div>
 
-      <div>
-        <div class="flex items-center gap-2">
-          <%= settings_form.check_box :include_sunday, { checked: @team.include_sunday_in_streak?, class: "form-input-checkbox", data: { restore_defaults_target: 'includeSunday' } }, true, false %>
-          <%= settings_form.label :include_sunday, 'Include Sundays', class: "select-none text-sm text-slate-700 dark:text-slate-300" %>
+      <div class="flex gap-x-2.5">
+        <div class="form-input-toggle shrink-0" data-controller="toggle-checkbox" data-action="click->toggle-checkbox#toggle">
+          <span class="form-input-toggle-switch"></span>
+          <%= settings_form.check_box :include_sunday, { checked: @team.include_sunday_in_streak?, class: 'sr-only', data: { restore_defaults_target: 'includeSunday', toggle_checkbox_target: 'checkbox' } }, true, false %>
         </div>
-        <p class="my-1 help-text">Check this box to allow Sundays to reset your team member's run streaks.</p>
+        <div>
+          <%= settings_form.label :include_sunday, 'Include Sundays', class: 'select-none text-slate-700 dark:text-slate-300' %>
+          <p class="my-1 help-text">Check this box to allow Sundays to reset your team member's run streaks.</p>
+        </div>
       </div>
     </div>
 
