--- a/app/views/users/_edit_settings.html.erb
+++ b/app/views/users/_edit_settings.html.erb
@@ -15,14 +15,21 @@
       <p class="text-sm text-slate-600 dark:text-slate-400">Display your contact information to other users on your profile.</p>
     </div>
 
-    <div class="space-y-2 form-group">
-      <div class="flex items-center gap-2">
-        <%= settings_form.check_box :email_visible, { checked: @user.show_email?, class: 'form-input-checkbox', data: { restore_defaults_target: 'emailVisible' } }, true, false %>
-        <%= settings_form.label :email_visible, 'Show email', class: 'select-none text-sm text-slate-700 dark:text-slate-300' %>
+    <div class="space-y-3 form-group">
+      <div class="flex gap-x-2.5">
+        <div class="form-input-toggle shrink-0" data-controller="toggle-checkbox" data-action="click->toggle-checkbox#toggle">
+          <span class="form-input-toggle-switch"></span>
+          <%= settings_form.check_box :email_visible, { checked: @user.show_email?, class: 'sr-only', data: { restore_defaults_target: 'emailVisible', toggle_checkbox_target: 'checkbox' } }, true, false %>
+        </div>
+        <%= settings_form.label :email_visible, 'Show email', class: 'select-none text-slate-700 dark:text-slate-300' %>
       </div>
-      <div class="flex items-center gap-2">
-        <%= settings_form.check_box :phone_visible, { checked: @user.show_phone?, class: 'form-input-checkbox', data: { restore_defaults_target: 'phoneVisible' } }, true, false %>
-        <%= settings_form.label :phone_visible, 'Show phone number', class: 'select-none text-sm text-slate-700 dark:text-slate-300' %>
+
+      <div class="flex gap-x-2.5">
+        <div class="form-input-toggle shrink-0" data-controller="toggle-checkbox" data-action="click->toggle-checkbox#toggle">
+          <span class="form-input-toggle-switch"></span>
+          <%= settings_form.check_box :phone_visible, { checked: @user.show_phone?, class: 'sr-only', data: { restore_defaults_target: 'phoneVisible', toggle_checkbox_target: 'checkbox' } }, true, false %>
+        </div>
+        <%= settings_form.label :phone_visible, 'Show phone number', class: 'select-none text-slate-700 dark:text-slate-300' %>
       </div>
     </div>
 
@@ -42,8 +49,11 @@
     </div>
 
     <div class="form-group">
-      <div class="flex items-center gap-2">
-        <%= settings_form.check_box :in_app, { checked: @user.settings(:notifications).in_app, class: 'form-input-checkbox', data: { restore_defaults_target: 'inApp' } }, true, false %>
+      <div class="flex gap-x-2.5">
+        <div class="form-input-toggle shrink-0" data-controller="toggle-checkbox" data-action="click->toggle-checkbox#toggle">
+          <span class="form-input-toggle-switch"></span>
+          <%= settings_form.check_box :in_app, { checked: @user.settings(:notifications).in_app, class: 'sr-only', data: { restore_defaults_target: 'inApp', toggle_checkbox_target: 'checkbox' } }, true, false %>
+        </div>
         <%= settings_form.label :in_app, 'In app notifications', class: 'select-none text-sm text-slate-700 dark:text-slate-300' %>
       </div>
     </div>
