feat: rename pinned pages to pinned shortcuts and add external link on manage page

--- a/app/views/pinned_pages/_delete_page_modal.html.erb
+++ b/app/views/pinned_pages/_delete_page_modal.html.erb
@@ -14,8 +14,8 @@
   class="modal opacity-0 pointer-events-none"
 >
   <div class="flex flex-col space-y-1.5 text-center sm:text-left">
-    <h2 class="text-lg font-semibold leading-none tracking-tight">Delete Page?</h2>
-    <p class="text-soft text-sm">Are you sure you want to delete your pin to "<%= page.title %>"? This action cannot be undone.</p>
+    <h2 class="text-lg font-semibold leading-none tracking-tight">Unpin Shortcut?</h2>
+    <p class="text-soft text-sm">Are you sure you want to unpin your shortcut to <span class="font-bold"><%= page.title %></span>? This action cannot be undone.</p>
   </div>
 
   <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
