--- a/app/views/pinned_pages/_list.html.erb
+++ b/app/views/pinned_pages/_list.html.erb
@@ -1,7 +1,7 @@
 <%= turbo_frame_tag 'pinned_pages_list' do %>
   <div class="space-y-1.5">
     <div class="mx-2 my-2 flex items-end justify-between">
-      <p class="text-soft text-sm">Pinned pages</p>
+      <p class="text-soft text-sm">Pinned shorcuts</p>
       <% pinned_pages = current_user.pinned_pages.order(:position) %>
       <%= link_to 'Edit', manage_pinned_pages_path, data: { turbo: false }, class: 'btn-link-soft text-xs' if pinned_pages.any? %>
     </div>
