--- a/app/views/teams/shared/_delete_team_modal.html.erb
+++ b/app/views/teams/shared/_delete_team_modal.html.erb
@@ -19,7 +19,7 @@
   </div>
 
   <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
-    <button data-action="click->modal#close" data-modal-id="deleteTeam" type="button" class="btn btn-white mt-2 sm:mt-0">Cancel</button>
+    <button data-action="click->modal#close" data-modal-id="deleteTeam" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Cancel</button>
     <%= button_to 'Delete team',
                   team,
                   method: :delete,
