--- a/app/views/pinned_pages/_delete_page_modal.html.erb
+++ b/app/views/pinned_pages/_delete_page_modal.html.erb
@@ -19,8 +19,8 @@
   </div>
 
   <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
-    <button data-action="click->modal#close" data-modal-id="deletePage_<%= page.id %>" type="button" class="btn btn-white mt-2 sm:mt-0">Cancel</button>
-    <%= button_to 'Delete page',
+    <button data-action="click->modal#close" data-modal-id="deletePage_<%= page.id %>" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Cancel</button>
+    <%= button_to 'Unpin shortcut',
                   page,
                   method: :delete,
                   data: { turbo: false },
