--- a/app/views/teams/forms/_edit_settings.html.erb
+++ b/app/views/teams/forms/_edit_settings.html.erb
@@ -136,6 +136,6 @@
 
   <div class="sticky bottom-0 flex items-center gap-4 pt-6 pb-6 bg-white border-t dark:bg-slate-900 border-slate-200 dark:border-slate-700">
     <%= button_tag 'Save settings', type: 'submit', class: 'btn btn-primary', name: 'commit_action', value: 'save_settings', data: { turbo: false } %>
-    <%= link_to 'Cancel', :back, class: 'btn btn-white btn-muted', data: { turbo: false } %>
+    <%= link_to 'Cancel', :back, class: 'btn btn-dark btn-muted', data: { turbo: false } %>
   </div>
 <% end %>
